Слайдер комментариев. Начало.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,37 @@
 </head>
 <body>
 <div class="wraper">
-
+<div class="comment_block modal">
+    <a href="javascript:void(0)" class="close close_comment"><i></i></a>
+    <div class="comment_block_header">
+<h3><i class="comment_icon"></i>“Народ имеет право знать!” - отзывы физических лиц </h3>
+    </div>
+    <div class="individuals_block">
+        <div class="individuals_block_slide">
+            <div class="individuals_block_slide_header">
+                <div class="individuals_block_slide_header_men">
+                    <div class="individuals_block_slide_header_men_foto">
+                        <img src="img/man.jpg" alt="Павел Васильченко" title="Павел Васильченко">
+                    </div>
+                    <div class="individuals_block_slide_header_men_info_block">
+                        <h3>Павел Васильченко</h3>
+                        <div class="star_line">
+                            <a href="javascript:void(0)" class="activ"></a>
+                            <a href="javascript:void(0)" class="activ"></a>
+                            <a href="javascript:void(0)" class="activ"></a>
+                            <a href="javascript:void(0)" class="activ"></a>
+                            <a href="javascript:void(0)" class="activ"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     <div class="modal_fon">
         <!--СПАСИБО -->
-        <div class="thenk_block">
-            <a href="javascript:void(0)" class="close"><i></i></a>
+        <div class="thenk_block modal">
+            <a href="javascript:void(0)" class="close close_thenk"><i></i></a>
             <div class="thenk_block__adres">
                 <p>г.Ростов-на-Дону, пр. Шолохова, д.101</p>
                 <a href="javascript:void(0)"><i></i>Показать на карте</a>
@@ -36,7 +62,7 @@
             </div>
             <div class="thenk_block_footer">
                 <a href="javascript:void(0)">Контакты ООО “Вимтех”</a>
-                <p>Телефон претензий и контроля качества <span>+7 (904) 348 59 21</span></p>
+                <p>Телефон претензий и контроля качества <span >+7 (904) 348 59 21</span></p>
             </div>
         </div>
         <!--/СПАСИБО -->
@@ -3651,7 +3677,7 @@
                                 </p>
                                 <input type="text" placeholder="+7 (916) 501 08 54" id="tel_footer">
                             </div>
-                            <a href="ascript:void(0)" class="submit"><span>заказать звонок</span></a></div>
+                            <a href="ascript:void(0)" class="submit" id="submit_ring"><span>заказать звонок</span></a></div>
                     </div>
                 </div>
             </div>
