Реализован вывод полного текста отзыва

--- a/index.html
+++ b/index.html
@@ -14,34 +14,124 @@
 </head>
 <body>
 <div class="wraper">
-<div class="comment_block modal">
-    <a href="javascript:void(0)" class="close close_comment"><i></i></a>
-    <div class="comment_block_header">
-<h3><i class="comment_icon"></i>“Народ имеет право знать!” - отзывы физических лиц </h3>
-    </div>
-    <div class="individuals_block">
-        <div class="individuals_block_slide">
-            <div class="individuals_block_slide_header">
-                <div class="individuals_block_slide_header_men">
-                    <div class="individuals_block_slide_header_men_foto">
-                        <img src="img/man.jpg" alt="Павел Васильченко" title="Павел Васильченко">
-                    </div>
-                    <div class="individuals_block_slide_header_men_info_block">
-                        <h3>Павел Васильченко</h3>
-                        <div class="star_line">
-                            <a href="javascript:void(0)" class="activ"></a>
-                            <a href="javascript:void(0)" class="activ"></a>
-                            <a href="javascript:void(0)" class="activ"></a>
-                            <a href="javascript:void(0)" class="activ"></a>
-                            <a href="javascript:void(0)" class="activ"></a>
+
+    <div class="comment_block modal">
+        <a href="javascript:void(0)" class="close close_comment"><i></i></a>
+        <div class="comment_block_header">
+            <h3><i class="comment_icon"></i>“Народ имеет право знать!” - отзывы физических лиц </h3>
+        </div>
+        <div class="individuals_block">
+            <div class="individuals_block_slide">
+                <div class="individuals_block_slide_header">
+                    <div class="individuals_block_slide_header_men">
+                        <div class="individuals_block_slide_header_men_foto">
+                            <img src="img/man.jpg" alt="Павел Васильченко" title="Павел Васильченко">
                         </div>
+                        <div class="individuals_block_slide_header_men_info_block">
+                            <h3>Павел Васильченко</h3>
+                            <div class="star_line">
+                                <a href="javascript:void(0)" class="activ"></a>
+                                <a href="javascript:void(0)" class="activ"></a>
+                                <a href="javascript:void(0)" class="activ"></a>
+                                <a href="javascript:void(0)" class="activ"></a>
+                                <a href="javascript:void(0)" class="activ"></a>
+                            </div>
+                            <p class="data">27 февраля 2017</p>
+                        </div>
+                    </div>
+                    <div class="individuals_block_slide_header_yandex_block">
+                        <div class="individuals_block_slide_header_yandex_block_comment">
+                            <a href="https://clck.yandex.ru/redir/dtype=stred/pid=47/cid=2508/*https://market.yandex.ru/shop/88803/reviews"><img
+                                    src="https://clck.yandex.ru/redir/dtype=stred/pid=47/cid=2507/*https://grade.market.yandex.ru/?id=88803&action=image&size=2"
+                                    border="0" width="150" height="101"
+                                    alt="Читайте отзывы покупателей и оценивайте качество магазина на Яндекс.Маркете"/></a>
+                        </div>
+                        <a href="javascript:void(0)" class="individuals_block_slide_header_yandex_block_baner_yandex">
+                            <img src="img/yandex_baner.jpg" alt="Поллучить 200руб. за отыв"
+                                 title="Получить 200руб. за отзыв">
+                        </a>
+                    </div>
+                </div>
+                <div class="individuals_block_slide_content">
+                    <div class="text_block">
+                        <a href="#" class="all_read" >Читать полностью...</a>
+                    <div class="main_wrap text_wrap">
+                    <p class="individuals_block_slide_content_main">
+                        “Сам текст отзыва из админки, подсчитать размер блока в буквах и внести подсчитать размер блока
+                        в буквах и внести ограничение в адмиподсчитать размер блока в буквах и внестинке, сам текст
+                        отзыва из админки, подсчитать размер блока в буквах и внести ограничение в админке, и отзыва из
+                        админки, подсчитать размерподсчитать размер блока в буквах”
+                        “Сам текст отзыва из админки, подсчитать размер блока в буквах и внести подсчитать размер блока
+                        в буквах и внести ограничение в адмиподсчитать размер блока в буквах и внестинке, сам текст
+                        отзыва из админки, подсчитать размер блока в буквах и внести ограничение в админке, и отзыва из
+                        админки, подсчитать размерподсчитать размер блока в буквах”
+                    </p>
+                    </div>
+                    </div>
+                    <div class="individuals_block_slide_content_detail">
+                        <div class="individuals_block_slide_content_detail_worth">
+                            <div class="text_block">
+                                <a href="#" class="all_read">Читать полностью...</a>
+                            <div class="detail_wrap text_wrap">
+                            <h3>Достоинства:</h3>
+                            <p>
+                                положительный хороший текс, редактируется в админ панели и ЕКСЕЛЬположительный хороший
+                                текс, редактируется редактируется в админ панели и ЕКСЕЛЬположительный хороший текс,
+                                редактируется в админ панели и ЕКСЕЛЬположительный хороший редактируется в админ панели
+                                и ЕКСЕЛЬположительный хороший текс, ЕКСЕЛЬположительный хороший текс, редактируется
+                                редактируется в админ панели и ЕКСЕЛЬположительный хороший текс, редактируется в админ
+                                панели и ЕКСЕЛЬ
+                            </p>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="individuals_block_slide_content_detail_limitations">
+                            <div class="text_block">
+                                <a href="#" class="all_read">Читать полностью...</a>
+                            <div class="detail_wrap text_wrap">
+                            <h3>Недостатки:</h3>
+                            <p>
+                                положительный хороший текс, редактируется в админ панели и ЕКСЕЛЬположительный хороший
+                                текс, редактируется редактируется в админ панели и ЕКСЕЛЬположительный хороший текс,
+                                редактируется в админ панели и ЕКСЕЛЬположительный хороший редактируется в админ панели
+                                и ЕКСЕЛЬположительный хороший текс, ЕКСЕЛЬположительный хороший текс, редактируется
+                                редактируется в админ панели и ЕКСЕЛЬположительный хороший текс, редактируется в админ
+                                панели и ЕКСЕЛЬ
+                            </p>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="individuals_block_slide_content_quality">
+                        <div class="individuals_block_slide_content_quality_zag">
+                            <h3><a href="index.html"><img src="img/logo_comment.jpg" alt="На главнную"
+                                                          title="на главную"></a> Ответ отдела “Контроль качества
+                                работы”</h3>
+                        </div>
+                        <p>
+                            “Сам текст отзыва из админки, подсчитать размер блока в буквах и внести подсчитать размер
+                            блока в буквах и внести ограничение в адмиподсчитать размер блока в буквах и внестинке, сам
+                            текст отзыва из админки, подсчитать размер блока в буквах и внести ограничение в админке, и
+                            отзыва из админки, подсчитать размерподсчитать размер блока в буквах отзыва из админки,
+                            подсчитать размер блока в буквах и внести подсчитать размер блока в буквах и внести
+                            ограничение в адмиподсчитать размер блока в буквах и внестинке, сам текст отзыва из админки,
+                            подсчитать размер блока в буквах и внести ограничение в админке, и отзыва из админки,
+                            подсчитать размерподсчитать размер блока в буквах”
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
     <div class="modal_fon">
+        <!--Читать полностью-->
+        <div class="big_text modal">
+            <a href="javascript:void(0)" class="close close_comment"><i></i></a>
+            <p>
+
+            </p>
+        </div>
+        <!--/Читать полностью-->
         <!--СПАСИБО -->
         <div class="thenk_block modal">
             <a href="javascript:void(0)" class="close close_thenk"><i></i></a>
@@ -62,7 +152,7 @@
             </div>
             <div class="thenk_block_footer">
                 <a href="javascript:void(0)">Контакты ООО “Вимтех”</a>
-                <p>Телефон претензий и контроля качества <span >+7 (904) 348 59 21</span></p>
+                <p>Телефон претензий и контроля качества <span>+7 (904) 348 59 21</span></p>
             </div>
         </div>
         <!--/СПАСИБО -->
@@ -3677,7 +3767,8 @@
                                 </p>
                                 <input type="text" placeholder="+7 (916) 501 08 54" id="tel_footer">
                             </div>
-                            <a href="ascript:void(0)" class="submit" id="submit_ring"><span>заказать звонок</span></a></div>
+                            <a href="ascript:void(0)" class="submit" id="submit_ring"><span>заказать звонок</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
