исправлена ошибка микроразметки отзывов

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="individuals_block_slide_header_men_info_block">
                             <!-- Имя пользователя  -->
 
-                            <div itemprop="author" itemscope itemtype="http://schema.org/Person"><h3  itemprop="author">Ишколов Расим</h3></div>
+                            <div itemprop="author" itemscope itemtype="http://schema.org/Person"><h3  itemprop="name">Ишколов Расим</h3></div>
                             <!-- Рейтинг  -->
                             <div class="star_line"  itemscope="" itemtype="http://schema.org/Rating">
                                 <meta itemprop="ratingValue" content="4"/>
