Исправлена ошибка микроразметки слайддов

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- Подсказка к банеу -->
                 <p class="help_baner">
                     <span class="arow_help"></span>
-                    <i itemprop="name">Акция по отзывам 200 руб. на телефон за отзыв!
+                    <i >Акция по отзывам 200 руб. на телефон за отзыв!
                         Для того чтобы принять участие в акции, вам необходимо:
                         Перейти по ссылке и оставить сообщение о ранее сделанной покупке в нашем магазине.
                         Написать на почту zakaz@2211687.ru о том, что вы оставили отзыв о компании ВИМТЕХ c указанием
@@ -98,7 +98,7 @@
                         <div class="main_wrap text_wrap">
                             <!-- Основной текст отзыва  -->
                             <p class="individuals_block_slide_content_main">
-                                <i>Качество работы приятно удивило, а цена порадовала. Рекомендую !!!</i>
+                                <i itemprop="name">Качество работы приятно удивило, а цена порадовала. Рекомендую !!!</i>
                             </p>
                             <!-- /Основной текст отзыва  -->
                         </div>
@@ -242,7 +242,7 @@
                                 <!-- Что понравилось -->
                                 <div itemprop="review" itemscope itemtype="http://schema.org/Review"
                                      class="detail_wrap text_wrap">
-                                    <meta itemprop="author" content="Ишколов Расим">
+                                    <meta itemprop="author" content="Дохленко Ольга">
                                     <h3>Достоинства:</h3>
                                     <p itemprop="reviewBody">
                                         Грамотный персонал, качественная аккуратная работа - собственно для меня это
@@ -375,7 +375,7 @@
                                 <!-- Что понравилось -->
                                 <div itemprop="review" itemscope itemtype="http://schema.org/Review"
                                      class="detail_wrap text_wrap">
-                                    <meta itemprop="author" content="Ишколов Расим">
+                                    <meta itemprop="author" content="Кочерян Денис">
                                     <h3>Достоинства:</h3>
                                     <p itemprop="reviewBody">
                                         квалифицированный менеджер, опытные монтажники и цена конечно дешевле чем в
@@ -507,7 +507,7 @@
                                 <!-- Что понравилось -->
                                 <div itemprop="review" itemscope itemtype="http://schema.org/Review"
                                      class="detail_wrap text_wrap">
-                                    <meta itemprop="author" content="Ишколов Расим">
+                                    <meta itemprop="author" content="Иванов Андрей">
                                     <h3>Достоинства:</h3>
                                     <p itemprop="reviewBody">
                                         К выбору сплит-системы я подошел основательно - с утра до вечера три дня подряд
@@ -674,7 +674,7 @@
                                 <!-- Что понравилось -->
                                 <div itemprop="review" itemscope itemtype="http://schema.org/Review"
                                      class="detail_wrap text_wrap">
-                                    <meta itemprop="author" content="Ишколов Расим">
+                                    <meta itemprop="author" content="Василенко Сергей">
                                     <h3>Достоинства:</h3>
                                     <p itemprop="reviewBody">
                                         профессиональный подход, четкая и слаженная работа службы продаж, доставки и
@@ -722,7 +722,7 @@
             <!--/Отзыв5 -->
 
 
-            <!--Отзыв66 -->
+            <!--Отзыв6 -->
             <div itemscope itemtype="http://schema.org/comment" class="individuals_block_slide">
                 <!-- Подсказка к банеу -->
                 <p class="help_baner">
@@ -819,7 +819,7 @@
                                 <!-- Что понравилось -->
                                 <div itemprop="review" itemscope itemtype="http://schema.org/Review"
                                      class="detail_wrap text_wrap">
-                                    <meta itemprop="author" content="Ишколов Расим">
+                                    <meta itemprop="author" content="Васильев Вадим">
                                     <h3>Достоинства:</h3>
                                     <p itemprop="reviewBody">
                                         просто отличный магазин
@@ -951,7 +951,7 @@
                                 <!-- Что понравилось -->
                                 <div itemprop="review" itemscope itemtype="http://schema.org/Review"
                                      class="detail_wrap text_wrap">
-                                    <meta itemprop="author" content="Ишколов Расим">
+                                    <meta itemprop="author" content="Литвин Владимир">
                                     <h3>Достоинства:</h3>
                                     <p itemprop="reviewBody">
                                         Товар, персонал
@@ -1087,7 +1087,7 @@
                                 <!-- Что понравилось -->
                                 <div itemprop="review" itemscope itemtype="http://schema.org/Review"
                                      class="detail_wrap text_wrap">
-                                    <meta itemprop="author" content="Ишколов Расим">
+                                    <meta itemprop="author" content="Елена Лихачева">
                                     <h3>Достоинства:</h3>
                                     <p itemprop="reviewBody">
 
