Добавлен слаййдер юридических лиц

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- Подсказка к банеу -->
                 <p class="help_baner">
                     <span class="arow_help"></span>
-                    <i >Акция по отзывам 200 руб. на телефон за отзыв!
+                    <i>Акция по отзывам 200 руб. на телефон за отзыв!
                         Для того чтобы принять участие в акции, вам необходимо:
                         Перейти по ссылке и оставить сообщение о ранее сделанной покупке в нашем магазине.
                         Написать на почту zakaz@2211687.ru о том, что вы оставили отзыв о компании ВИМТЕХ c указанием
@@ -98,7 +98,8 @@
                         <div class="main_wrap text_wrap">
                             <!-- Основной текст отзыва  -->
                             <p class="individuals_block_slide_content_main">
-                                <i itemprop="name">Качество работы приятно удивило, а цена порадовала. Рекомендую !!!</i>
+                                <i itemprop="name">Качество работы приятно удивило, а цена порадовала. Рекомендую
+                                    !!!</i>
                             </p>
                             <!-- /Основной текст отзыва  -->
                         </div>
@@ -1127,6 +1128,163 @@
             <!--/Отзыв8 -->
 
         </div>
+        <!--Отзывы юр.лиц -->
+        <div class="entity_wrap">
+            <div class="comment_block_header">
+                <h3><i class="entity_icon"></i>Партнеры <span>В</span>имтех - отзывы юридических лиц</h3>
+            </div>
+            <div class="entity_wrap_slider">
+                <!--Отзыв юр лиц1-->
+                <div class="entity_wrap_slider_slide" itemscope="" itemtype="http://schema.org/comment">
+                <div class="text_block">
+                    <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
+                    <div class="main_wrap text_wrap">
+                        <!--Фото-->
+                        <p><img src="img/ur1.jpg" alt="Россельмаш" title="Россельмаш" itemprop="image">
+                            <!--/Фото-->
+                            <!--Текст отзыва-->
+                            <i itemprop="name">“Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                размерподсчитать размер блока в буквах”</i>
+                            <!--/Текст отзыва-->
+
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+                <!--/Отзыв юр лиц1-->
+
+                <!--Отзыв юр лиц2-->
+                <div class="entity_wrap_slider_slide" itemscope="" itemtype="http://schema.org/comment">
+                    <div class="text_block">
+                        <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
+                        <div class="main_wrap text_wrap">
+                            <p>
+                                <!--Фото-->
+                                <img src="img/ur2.jpg" alt="РЖД" title="РЖД" itemprop="image">
+                                <!--текст-->
+                                <i itemprop="name">“Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                    внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                    блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                    буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                    размерподсчитать размер блока в буквах”</i>
+                                <!--/текст-->
+
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/Отзыв юр лиц2-->
+
+                <!--Отзыв юр лиц3-->
+                <div class="entity_wrap_slider_slide" itemscope="" itemtype="http://schema.org/comment">
+                      <div class="text_block">
+                        <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
+                        <div class="main_wrap text_wrap">
+                            <p>
+                                <!--Фото-->
+                                <img src="img/ur3.jpg" alt="ООО «Аксайская птицефабрика»" title="ООО «Аксайская птицефабрика»" itemprop="image">
+                                <!--/Фото-->
+                                <!--текст-->
+                                <i itemprop="name">“Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                    внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                    блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                    буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                    размерподсчитать размер блока в буквах”</i>
+                                <!--/текст-->
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/Отзыв юр лиц3-->
+
+                <!--Отзыв юр лиц4-->
+                <div class="entity_wrap_slider_slide" itemscope="" itemtype="http://schema.org/comment">
+                   <div class="text_block">
+                        <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
+                        <div class="main_wrap text_wrap">
+                            <p>
+                                <!--Фото-->
+                                <img src="img/ur4.jpg" alt="Детская стоматологическая клиника «Бобренок»" title="Детская стоматологическая клиника «Бобренок»" itemprop="image">
+                                <!--/Фото-->
+                                <!--текст-->
+                                <i itemprop="name">“Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                    внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                    блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                    буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                    размерподсчитать размер блока в буквах”</i>
+                                <!--/текст-->
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/Отзыв юр лиц4-->
+                <!--Отзыв юр лиц5-->
+                <div class="entity_wrap_slider_slide" itemscope="" itemtype="http://schema.org/comment">
+                   <div class="text_block">
+                        <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
+                        <div class="main_wrap text_wrap">
+                            <p>
+                                <!--Фото-->
+                                <img src="img/ur5.jpg" alt='Мультибрендовый сервисный центр: "Вечный двигатель"' title='Мультибрендовый сервисный центр: "Вечный двигатель"' itemprop="image">
+                                <!--/Фото-->
+                                <!--текст-->
+                                <i itemprop="name">“Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                    внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                    блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                    буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                    размерподсчитать размер блока в буквах”</i>
+                                <!--/текст-->
+
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/Отзыв юр лиц5-->
+
+                <!--Отзыв юр лиц6-->
+                <div class="entity_wrap_slider_slide" itemscope="" itemtype="http://schema.org/comment">
+                    <div class="text_block">
+                        <a href="#" class="all_read" tabindex="0">Читать полностью...</a>
+                        <div class="main_wrap text_wrap">
+                            <p>
+                                <!--Фото-->
+                                <img src="img/ur6.jpg" alt='Мультибрендовый сервисный центр: "Вечный двигатель"' title='Мультибрендовый сервисный центр: "Вечный двигатель"' itemprop="image">
+                                <!--/Фото-->
+                                <!--текст(много текста для теста)-->
+                                <i itemprop="name">“Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                    внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                    блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                    буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                    размерподсчитать размер блока в буквах”</i>
+                                “Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                размерподсчитать размер блока в буквах”
+                                “Сам текст отзыва из админки, подсчитать размер блока в буквах и
+                                внести подсчитать размер блока в буквах и внести ограничение в адмиподсчитать размер
+                                блока в буквах и внестинке сам текст отзыва из админки, подсчитать размер блока в
+                                буквах и внести ограничение в админке, и отзыва из админки, подсчитать
+                                размерподсчитать размер блока в буквах”
+                                <!--/текст-->
+
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/Отзыв юр лиц5-->
+            </div>
+        </div>
+        <!--/Отзывы юр.лиц -->
     </div>
     <div class="modal_fon">
         <!--Читать полностью-->
