Востановлена логика схем проезда

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
 
     <div class="modal_fon">
 
+        <!--блок с миниатюрами схем-->
+        <div class="miniature_block modal">
+            <a href="javascript:void(0)" class="close_mini"></a>
+            <a href="javascript:void(0)" class="img">
+                <img src="img/foto.jpg" alt="foto" title="foto">
+            </a>
+            <a href="#map_big" class="img">
+                <img src="img/map.jpg" alt="map" title="map">
+            </a>
+            <a href="#schem_big" class="img">
+                <img src="img/schema.jpg" alt="schema" title="schema">
+            </a>
+        </div>
+        <!--/миниатюры-->
+
         <!--Комментарии-->
         <div class="comment_block modal">
             <a href="javascript:void(0)" class="close close_comment"><i></i></a>
@@ -1345,7 +1360,7 @@
             <a href="javascript:void(0)" class="close close_thenk"><i></i></a>
             <div class="thenk_block__adres">
                 <p>г.Ростов-на-Дону, пр. Шолохова, д.101</p>
-                <a href="javascript:void(0)"><i></i>Показать на карте</a>
+                <a href="javascript:void(0)" id="schem_thenks"><i></i>Показать на карте</a>
             </div>
             <div class="thenk_block_logo">
                 <a href="index.html">
@@ -2341,20 +2356,7 @@
     <header class="header">
 
         <div class="content">
-            <!--блок с миниатюрами схем-->
-            <div class="miniature_block">
-                <a href="javascript:void(0)" class="close_mini"></a>
-                <a href="javascript:void(0)" class="img">
-                    <img src="img/foto.jpg" alt="foto" title="foto">
-                </a>
-                <a href="#map_big" class="img">
-                    <img src="img/map.jpg" alt="map" title="map">
-                </a>
-                <a href="#schem_big" class="img">
-                    <img src="img/schema.jpg" alt="schema" title="schema">
-                </a>
-            </div>
-            <!--/миниатюры-->
+
             <!--модальное окно логотип начало -->
             <div class="logo_modal" id="modal_logo">
                 <div class="logo_modal_logo_block">
@@ -4866,18 +4868,7 @@
     </section>
     <footer class="footer">
         <div class="content">
-            <div class="miniature_block">
-                <a href="javascript:void(0)" class="close_mini"></a>
-                <a href="javascript:void(0)" class="img">
-                    <img src="img/foto.jpg" alt="foto" title="foto">
-                </a>
-                <a href="#map_big" class="img">
-                    <img src="img/map.jpg" alt="map" title="map">
-                </a>
-                <a href="#schem_big" class="img">
-                    <img src="img/schema.jpg" alt="schema" title="schema">
-                </a>
-            </div>
+
             <div class="footer_mini_link">
                 <a href="javascript:void(0)">каталог</a>
                 <a href="javascript:void(0)">контакты</a>
