Доработанна прокрутка 3D схем

--- a/index.html
+++ b/index.html
@@ -1456,8 +1456,8 @@
                 </div>
                 <div class="schem_big_block__schem_block_table">
                     <div class="schem_big_block__schem_block_img_block">
-                        <img src="img/schema/schem1.png" class="action" alt="schema1" title="schema1" id="schem1">
-                        <img src="img/schema/schem2.png" alt="schema2" title="schema2" id="schem2">
+                        <img src="img/schema/schem1.png" class="action schem_img" alt="schema1" title="schema1" id="schem1">
+                        <img src="img/schema/schem2.png" class="schem_img" alt="schema2" title="schema2" id="schem2">
                     </div>
                 </div>
             </div>
