Добавлен попап келон

--- a/index.html
+++ b/index.html
@@ -1640,6 +1640,34 @@
                 </div>
             </div>
         </div>
+        <!--midea-->
+        <div class="monufactur_bkock kelon modal" id="kelon">
+            <a href="javascript:void(0)" class="close monufacture_close"><i></i></a>
+            <div class="kelon_text">
+                <p class="kelon_text_info">
+                    <span>Адрес:</span> КНР, провинция Гуаньчжоу, город Гуаньчжоу, 25 улица д 5 тел. +5(456)-45-485
+                </p>
+                <p class="kelon_text_info">
+                    <span>Наличие собственного цеха по производству компрессоров:</span> Приходите в ВИМТЕХ, проконсультируем, расскажем
+                </p>
+                <div class="descript_wrap">
+                    <p class="kelon_text_text">
+                        Китайская компания Guangdong Kelon Electrical Holdings Co., Ltd. – один из ведущих
+                        производителей кондиционеров и холодильников в стране. Компания была основана в 1984 году, а
+                        сегодня она входит в пятерку наиболее крупных производителей бытовых и промышленных систем
+                        кондиционирования воздуха в Китае.
+                        Основной ее деятельностью является производство кондиционеров и бытового холодильного
+                        оборудования. Помимо производства техники под собственными марками, Kelon Electrics является
+                        крупнейшим OEM-производителем.
+                        В 2003 г. компания существенно расширила производственные мощности, купив четыре завода. Будучи
+                        одним из самых крупных потребителей материалов среди других китайских производителей
+                        климатической техники, Kelon предлагает наиболее конкурентоспособную цену. В настоящий момент
+                        компания Kelon Electrical Holdings имеет 4 завода, производящих кондиционеры, и 11 заводов по
+                        производству
+                    </p>
+                </div>
+            </div>
+        </div>
         <!--aux-->
         <div class="monufactur_bkock aux modal" id="aux">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
@@ -1810,13 +1838,15 @@
                     проконсультируем, расскажем
                 </p>
                 <div class="descript_wrap">
-                <p class="haier_text_text">
-                    В Европе эта фирма известна под двумя торговыми марками Haier и HEC (Haier Europe Corporation), что
-                    в общем одно и тоже.
-                    История Haier начинается задолго до образования самой компании.
-                    В 1920-х для поддержки внутреннего китайского рынка был построен «Завод холодильников Циндао». После
-                    1949 года с установлением Китайской Народной Республики завод был
-                </p>
+                    <p class="haier_text_text">
+                        В Европе эта фирма известна под двумя торговыми марками Haier и HEC (Haier Europe Corporation),
+                        что
+                        в общем одно и тоже.
+                        История Haier начинается задолго до образования самой компании.
+                        В 1920-х для поддержки внутреннего китайского рынка был построен «Завод холодильников Циндао».
+                        После
+                        1949 года с установлением Китайской Народной Республики завод был
+                    </p>
                 </div>
             </div>
         </div>
